# aws-infra-manager-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.kiro/settings/: mcp.json
docs/: api_reference.md  security_guide.md
examples/: basic_usage.py  demo_script.py  deployment_guide.md  mcp_config.json
scripts/: validate_setup.py
src/aws_infra_manager_mcp_server/: __init__.py  cli.py  server.py  server_backup.py  simple_server.py
tests/: test_integration.py  test_server.py
