[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-infra-manager-mcp-server"
version = "0.1.0"
description = "MCP server for comprehensive AWS infrastructure management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
aws-infra-manager-mcp-server = "aws_infra_manager_mcp_server.server:main"
aws-infra-cli = "aws_infra_manager_mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_infra_manager_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"